--- a/components/piano/PianoRoll.module.css
+++ b/components/piano/PianoRoll.module.css
@@ -1,3 +1,17 @@
-.pianoRoll {
-  border: 1px solid #ccc;
+.pianoRollWrapper {
+  position: relative;
+  width: 800px;
+  height: 400px;
+}
+
+.whiteKeysCanvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.blackKeysCanvas {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
