--- a/styles/Expenses.module.css
+++ b/styles/Expenses.module.css
@@ -85,3 +85,8 @@
   display: grid;
   grid-template-columns: 25% 50% 25%;
 }
+
+.gridtable {
+  display: grid;
+  grid-template-columns: minmax(100px, 200px) repeat(13, 1fr);
+}
