--- a/styles/Resume.module.css
+++ b/styles/Resume.module.css
@@ -1,44 +1,47 @@
-.resume {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  font-family: "Open Sans", sans-serif;
-  color: #333;
-  background: #fff;
-  padding: 40px;
+/* components/CV.module.css */
+
+.a4 {
+  display: flex;
+  flex-direction: row;
+  width: 210mm;
+  min-height: 297mm;
+  padding: 20mm;
+  margin: auto;
+  background: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  page-break-after: always;
 }
 
-.header {
-  grid-column: 1 / -1;
-  text-align: center;
+.column {
+  flex: 1;
 }
 
-.contactInfo {
-  grid-column: 1;
+#left-column {
+  /* Estilos para la columna izquierda */
 }
 
-.profile,
-.skills,
-.experience,
-.education {
-  margin-bottom: 20px;
+#right-column {
+  /* Estilos para la columna derecha */
 }
 
-.h1 {
-  font-size: 36px;
-  margin-bottom: 0;
+.printButton {
+  display: block;
+  margin: 10mm auto;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
 }
 
-.h2 {
-  font-size: 24px;
-  color: #666;
-  margin-top: 0;
-}
+/* Estilos para la impresión */
+@media print {
+  .a4 {
+    box-shadow: none;
+    width: 100%;
+    min-height: 0;
+    page-break-after: auto;
+  }
 
-.h3 {
-  font-size: 20px;
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 5px;
+  .printButton {
+    display: none;
+  }
 }
-
-/* Agrega aquí los estilos adicionales y las media queries. */
