--- a/styles/Resume.module.css
+++ b/styles/Resume.module.css
@@ -9,7 +9,7 @@
   grid-template-columns: 1.2fr 2fr;
   gap: 20px;
   width: 210mm;
-  height: 297mm;
+  min-height: 297mm;
   margin: 0;
   padding-right: 20mm;
   background: white;
@@ -61,6 +61,10 @@
 
 .textGray {
   color: var(--color-dark-gray);
+}
+
+.lineHeight {
+  line-height: 15px;
 }
 
 /* Tamaño de la foto del perfil */
